syntax = "proto3";
package lbm.slashing.v1;

option go_package            = "github.com/line/lbm-sdk/x/slashing/types";
option (gogoproto.equal_all) = true;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

// ValidatorSigningInfo defines a validator's signing info for monitoring their
// liveness activity.
message ValidatorSigningInfo {
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = false;

  string address = 1;
  // timestamp validator cannot be unjailed until
  google.protobuf.Timestamp jailed_until = 2
      [(gogoproto.moretags) = "yaml:\"jailed_until\"", (gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  // whether or not a validator has been tombstoned (killed out of validator
  // set)
  bool tombstoned = 3;
  // missed blocks counter (to avoid scanning the array every time)
  int64 missed_blocks_counter = 4 [(gogoproto.moretags) = "yaml:\"missed_blocks_counter\""];
  // how many times the validator joined to voter set
  int64 voter_set_counter = 5 [(gogoproto.moretags) = "yaml:\"voter_set_counter\""];
}

// Params represents the parameters used for by the slashing module.
message Params {
  int64 signed_blocks_window  = 1 [(gogoproto.moretags) = "yaml:\"signed_blocks_window\""];
  bytes min_signed_per_window = 2 [
    (gogoproto.moretags)   = "yaml:\"min_signed_per_window\"",
    (gogoproto.customtype) = "github.com/line/lbm-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  google.protobuf.Duration downtime_jail_duration = 3 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true,
    (gogoproto.moretags)    = "yaml:\"downtime_jail_duration\""
  ];
  bytes slash_fraction_double_sign = 4 [
    (gogoproto.moretags)   = "yaml:\"slash_fraction_double_sign\"",
    (gogoproto.customtype) = "github.com/line/lbm-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
  bytes slash_fraction_downtime = 5 [
    (gogoproto.moretags)   = "yaml:\"slash_fraction_downtime\"",
    (gogoproto.customtype) = "github.com/line/lbm-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}
